Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Grimoire</h1>
-      <h2 class="project-tagline">Functional 5e spell list by class and level</h2>
+      <h2 class="project-tagline">Vorian&#39;s Grimoire</h2>
       <a href="https://github.com/BenjaminWLarson/grimoire" class="btn">View on GitHub</a>
       <a href="https://github.com/BenjaminWLarson/grimoire/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/BenjaminWLarson/grimoire/tarball/master" class="btn">Download .tar.gz</a>
