--- a/index.html
+++ b/index.html
@@ -19,37 +19,55 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="grimoire" class="anchor" href="#grimoire" aria-hidden="true"><span class="octicon octicon-link"></span></a>Grimoire</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Grimoire is a mobile-friendly 5e spellbook that organizes spell lists by class and level.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>See the latest compiled build here: <a href="http://ephe.github.io/grimoire/">http://ephe.github.io/grimoire/</a></p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a id="changelog" class="anchor" href="#changelog" aria-hidden="true"><span class="octicon octicon-link"></span></a>Changelog</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<ul>
+<li>5/1/15: Many belated spell additions, thanks to <a href="https://github.com/jayrab" class="user-mention">@jayrab</a>, <a href="https://github.com/zetsevs" class="user-mention">@zetsevs</a>, and <a href="https://github.com/LukasCaller" class="user-mention">@LukasCaller</a>. Also table styles for web, though no real mobile support yet.</li>
+<li>1/1/15: Merged in several level 3 and level 4 spells, thanks to <a href="https://github.com/jayrab" class="user-mention">@jayrab</a>, <a href="https://github.com/zetsevs" class="user-mention">@zetsevs</a>, and <a href="https://github.com/LukasCaller" class="user-mention">@LukasCaller</a>.</li>
+<li>12/31/14: Added Cleric level 2 spells from the starter kit, merged in some bard spells from jayrab.</li>
+<li>9/30/14: Added rest of Wizard level 1 spells.</li>
+<li>9/26/14: Added Sorcerer and Warlock cantrips, and Ranger, Sorcerer and Warlock level 1 spells. Also Remove Curse and the level 3 category. Spell level links on spell pages now go to the level subsection in the full spell list (home) instead of a broken subpage.</li>
+<li>9/25/14: Added Druid cantrips and Druid and Paladin level 1 spells.</li>
+<li>Added all Bard cantrips and level 1 spells.</li>
+<li>Added Wizard cantrips and level 1 from the starter kit.</li>
+<li>Added all Cleric cantrips and level 1 spells.</li>
+</ul>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>
+<a id="to-do" class="anchor" href="#to-do" aria-hidden="true"><span class="octicon octicon-link"></span></a>To Do</h2>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<ul>
+<li>Create another layout for the spell level tag pages (e.g. cantrip, level1). Also figure out what to do with those pages.</li>
+<li>Find a real home for class specializations (e.g. cleric's domains)</li>
+<li>Clean up header and navigation scheme.</li>
+<li>Figure out mobile styles for tables. Also /fistshake at whoever decided tables in spell lists were a good idea.</li>
+<li>Finish adding spells, obviously.</li>
+</ul>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<h2>
+<a id="structure" class="anchor" href="#structure" aria-hidden="true"><span class="octicon octicon-link"></span></a>Structure</h2>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<p>Spells can be found inside <code>_posts/</code>. Each spell gets its own post, written and stored as a <a href="http://daringfireball.net/projects/markdown/basics">Markdown</a> file. The date is arbitrary and never displayed, but still necessary for <a href="http://jekyllrb.com">Jekyll</a> to process the posts properly.</p>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>If you'd like to help fill out the rest of the spells from the PHB, for each new spell you make:</p>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<ol>
+<li>Make a new post inside <code>_posts/</code> for each new spell, and copy the formatting from another spell.</li>
+<li>Submit a pull request for the spell(s) when you're finished, and that's it! Thank you so much. :)</li>
+</ol>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<h2>
+<a id="thanks" class="anchor" href="#thanks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Thanks</h2>
+
+<p>Cleric and wizard spells from the Starter Kit were seeded from <a href="http://www.reddit.com/r/DnD/comments/2a7wau/5e_cleric_and_wizard_spells_sorted_by_level/">this Reddit post</a>.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/BenjaminWLarson/grimoire">Grimoire</a> is maintained by <a href="https://github.com/BenjaminWLarson">BenjaminWLarson</a>.</span>
